<resources>
    <string name="app_name">CheemsTour</string>
    <string name="text_welcome">Bienvenido</string>
    <string name="text_new">Nuevo Viaje</string>
    <string name="text_list">Lista de Viajes</string>"
    <string name="text_register">Registrar Viaje</string>-
    <string name="text_name">Nombre: </string>
    <string name="text_city">Ciudad: </string>
    <string name="text_country">Pais: </string>
    <string name="text_save">Guardar</string>
    <string name="text_trip_saved">Viaje guardado correctamente</string>
    <string name="text_not_saved">No se pudo guardar el viaje</string>
    <string name="text_complete">Por favor, completa todos los campos</string>
    <string name="text_map">Mapa</string>
    <string name="text_deleted_successful">Viaje eliminado correctamente.</string>
    <string name="text_deleted_error">No se pudo eliminar el viaje. Intenta nuevamente.</string>
    <string name="text_updated_successful">Viaje actualizado correctamente.</string>
    <string name="text_updated_error">No se pudo actualizar el viaje. Revisa los datos e intenta otra vez.</string>
    <string name="text_saved_successful">Viaje guardado correctamente.</string>
    <string name="text_saved_error">Hubo un error al guardar el viaje.</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_edit">Editar</string>
    <string name="text_latitude">Latitud:</string>
    <string name="text_longitude">Longitud:</string>
    <string name="text_saveChanges">Guardar Cambios</string>
    <string name="location_name">Ubicación</string>
    <string name="local_time">Hora local</string>
    <string name="temperature">Temperature</string>
    <string name="weather_description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="clouds">Clouds</string>
</resources>