<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nombre del viaje" />

    <EditText
        android:id="@+id/editCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_city" />

    <EditText
        android:id="@+id/editCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_country" />

    <EditText
        android:id="@+id/editLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_latitude"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/editLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_longitude"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btnSaveChanges"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_saveChanges"
        android:backgroundTint="@color/blue"
        />

</LinearLayout>